--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,18 @@
 html {
   height: 100%;
 }
-body {
-  font-family: open sans, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  margin: 0;
-  padding: 0;
-  color: #364147;
-  background-color: #fff;
+body{
+  font-family: 'Open Sans', sans-serif;
+  background: #fffaf0;
+  min-height:100vh;
 }
-.wrapper {
-  display: grid;
-  grid-template-columns:  5fr 2fr 1fr;
-  border: solid 1px;
-  margin-bottom: 2px;
+.app {
+  position: relative;
+  padding: 30px;
 }
-.footer{
-  text-align: center;
-  color: gray;
-  padding: 20px 0 20px 0;
-  background-color: gainsboro;
-}
-
-.btn {
-  background-color: #444;
-  border: none; 
-  color: white;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  margin-left: 1px;
+.todo {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  justify-content: space-between;
 }
